Repaint overlay scrollbar if resource is disposed.

The previously painted resource can be disposed as the layer is
attached/detached from the LayerTreeHost. This isn't reflected by the
NeedsPaint status on the Blink-side Scrollbar so the scrollbar layer should
ignore the NeedsPaint status if it hasn't painted into its UIResource yet.

BUG=704656
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2777093005
Cr-Commit-Position: refs/heads/master@{#460188}

Former-commit-id: afaccab374bddd9bfc6e3609806da73860a5ba7d